# facetracker

./: .gitignore  LICENSE  README.md  pyproject.toml
model/: dataloader.py  dataset.py  download_data.py  main.py  simple.py  train.py
model/architectures/: vgg19.py
model/datasets/: facedataset.py
visualise/: audio_class.py  video_class.py
